# JanusX

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  build_backend.py  combine.py  install.bat  install.sh  jx  pyproject.toml
.github/workflows/: bioconda-ci.yml  bioconda-pr-update.yml  build-wheel.yml  release.yml  reusable-sdist-build.yml  reusable-wheel-build.yml  workflow-check.yml
bench/garfield_avx2/: Cargo.toml
bench/garfield_avx2/src/: main.rs
benches/: grm_dtype.rs
bioconda-recipes/: config.yml
bioconda-recipes/recipes/janusx/: build.sh  meta.yaml
bioconda-recipes/recipes/janusx-localcheck/: build.sh  meta.yaml
conda/recipe/: meta.yaml
doc/: JanusXcli.md  JanusXcore.md  PROJECT_MAP.md  README_zh.md  THIRD_PARTY_NOTICES.md  algorithm_zh.md  unix.sh
doc/release/: v1.0.24.md  v1.0.25.md  v1.0.26.md
example/: main.tmp.ipynb  rice6048.reml.tsv
examples/: probe_blas_threads.rs
ext/assoc_rs/: pyproject.toml
ext/glm_rs/: pyproject.toml
ext/glm_rs/src/: lib.rs
ext/lmm_rs/src/: lib.rs
launcher/: Cargo.toml  README.md
launcher/src/: dlc.rs  main.rs  pipeline.rs
launcher/src/fastq2count/: cmd.rs  mod.rs
launcher/src/fastq2vcf/: cmd.rs  mod.rs  state.rs
module/: JanusX.py  _gfreader.py  demo.py  gformat.py  grm.py  gs.py  gwas.py  gwasplot.py  pca.py  postGWAS.py  transanno.py
python/JanusX/bioplotkit/: pcshow.py
python/JanusX/script/: JanusX.py  gs.py  gwas.py  pca.py  postGWAS.py
python/janusx/: __init__.py  _optional_deps.py  ggval.py  kmc_bind.py
python/janusx/adamixture/: __init__.py  core.py
python/janusx/assoc/: __init__.py  _typing.py  api.py  config.py  lm.py  result.py  runner.py  smoke.py  workflow.py  workflow_cache.py  workflow_model_farmcpu.py  workflow_model_packed.py  workflow_model_stream.py  workflow_ui.py
python/janusx/bioplotkit/: LDBlock.py  __init__.py  geneplot.py  gffplot.py  gsplot.py  haplotype.py  manhanden.py  manhandenraw.py  pcshow.py  popstructure.py  stat.py
python/janusx/fastpop/: __init__.py
python/janusx/garfield/: README.md  decode.py  garfield.py  garfield2.py  logreg.py
python/janusx/gfreader/: __init__.py  base.py  gfreader.py  gmerge.py
python/janusx/gs/: __init__.py  blup.py  config.py  model.py  output.py  result.py  runner.py  workflow.py
python/janusx/gtools/: __init__.py  cleaner.py  reader.py  wgcna.py
python/janusx/linalg/: __init__.py
python/janusx/native/: build_kmc_bind.py  kmc_count_bind.cpp
python/janusx/pipeline/: __init__.py  _fastq2gvcf.py  compat.py  fastq2vcf.py  pipeline.py  tenv.py  workstate.py
python/janusx/pyBLUP/: QK2.py  __init__.py  assoc.py  bayes.py  blup.py  gblup.py  kfold.py  lmm.py  ml.py  mlm.py  stream_grm.py  tdata.py
python/janusx/script/: JanusX.py  adamixture.py  bayesbench.py  beam.py  benchmark.py  fastpop.py  fastq2count.py  fastq2vcf.py  fvlmm2.py  garfield.py  garfieldbench.py  gblupbench.py  gformat.py  gmerge.py  grm.py  gs.py  gstats.py  pca.py  (+20 more)
rust/JanusX_rs/: Cargo.toml  pyproject.toml
rust/JanusX_rs/python/JanusX_rs/: __init__.py  assoc.py  gfreader.py
rust/JanusX_rs/src/: assoc.rs  gfcore.rs  lib.rs
rust/gfreader_rs/: pyproject.toml
scripts/: 1.py  2.py  3.py  4.py  Tgarfield.py  analyze_splmm_fastgwa_multitrait_gamma.py  bench_genotype_io.py  bench_genotype_read_modes.py  bench_memmap_avx2_ab.py  benchmark.md  benchmark.sh  benchmark_fvlmm_hpc_matrix.py  benchmark_fvlmm_vs_fastlmm.py  benchmark_garfield_logic_search_backends.py  benchmark_garfield_score_gpu.py  benchmark_garfield_singleton_backends.py  benchmark_grm_backends.py  benchmark_lm_block.py  benchmark_splmm_mouse_regression.py  build_backend.py  cargo_test_py.sh  compare_fastgwa_residualized_scan.py  compare_fastgwa_rhat_modes.py  debug_splmm_qcov_null.py  ggval.py  ggval.sh  grm_slowdown_probe.py  install.ps1  install.sh  plot_wheat_blup_agreement_svg.py  probe_blas_threads.py  riceatlas_h2_summary.py  sim_case_marginal_pair.py  sim_case_weak_marginal_pair.py  sync_version_from_tag.py
scripts/ci/: build_linux_openblas.sh  check_installed_runtime.py  check_wheel_kmc.py  install_windows_condaforge_openblas.py  windows_launcher_smoke.ps1
src/: assoc.rs  bayes.rs  brent.rs  bsa.rs  gfcore.rs  gfreader.rs  gmerge.rs  grm_bench_support.rs  lib.rs  linalg.rs  lmm.rs  logreg.rs  svd.rs
src/bioplotkit/: manhanden.py
src/decode/: decode.rs
src/garfield/: bs.rs  mod.rs  permutation.rs  residual.rs  sampling.rs  score.rs  score_gpu.rs
src/gfreader/: base.py
src/io/: assoc2tsv.rs  bincore.rs  binsidecar.rs  binwriter.rs  breader.rs  gfcore.rs  gffanno.rs  gfreader.rs  gload.rs  gmerge.rs  gwasio.rs  gwriter.rs  pipeline.rs  sim.rs  vcfout.rs
src/kmer/: cli.rs  count.rs  encode.rs  format.rs  inputs.rs  kbin_stats.rs  mod.rs  progress.rs  reader.rs  record.rs  stage1_bucket.rs  stage2_merge.rs  stage2_stats.rs  stage3_concat.rs  stats.rs  writer.rs
src/math/: FaST.rs  KING.rs  active_path.rs  aireml.rs  bedmath.rs  bitwise.rs  blas.rs  brent.rs  cholesky.rs  eigh.rs  farmcpu.rs  grm.rs  lasso.rs  ld.rs  linalg.rs  pcg.rs
src/ml/: common.rs  engine.rs  extra_trees.rs  gbdt.rs  mod.rs  pairwise_and.rs  py.rs  rf.rs  univariate.rs
src/nightly/: assoc_gpu.rs
src/phylo/: convert.rs  mod.rs  writers.rs
src/pyBLUP/: QK2.py  __init__.py  farmcpu.py  glmrc.py  gwas.py  mlm.py  slim.py
src/rust2py/: assoc.py  gfreader.py
src/script/: JanusX.py  grm.py  gs.py  gwas.py  gwas2.py  pca.py  postGWAS.py  sim.py
src/sim/: g2p.rs
src/stats/: adamixture.rs  algwas.rs  assoc.rs  bayes.rs  beam.rs  bsa.rs  bstats.rs  common.rs  farmcpu.rs  fastlmm_lowrank.rs  fvlmm.rs  fvlmm2.rs  gblup.rs  glm.rs  glm2.rs  grm.rs  gs_native.rs  gstats.rs  gwas_unified.rs  he.rs  heritability.rs  jxlmm.rs  jxreml.rs  ld.rs  lm_trait.rs  lmm.rs  lmm_scan.rs  packed.rs  plot.rs  reml.rs  rrblup.rs  rrblupc.rs  rsvd.rs  score.rs  spgrm.rs  splmm.rs  splmm_approx.rs  spreml.rs  top.rs  tree.rs
src/workflow/: config.rs  mod.rs  pipeline.rs  result.rs
todo/: FaST.py  FastTree.c  bayes.py  blup.py  fastlmm.py  garfield.py  gblup.py  main.ipynb  pipeline.md  sparseGRM.py
(+60 files in other folders)
