[package]
name = "janusx"
version = "1.0.11"
edition = "2021"

[lib]
name = "janusx"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
numpy = "0.27.1"
csv = "1.4.0"
flate2 = "1.1.8"
memmap2 = "0.9.9"
libc = "0.2.180"
rayon = "1.10"
libm = "0.2.16"
nalgebra = "0.34.1"
rand = "0.9.2"
rand_distr = "0.5.1"
matrixmultiply = "0.3.10"
