[package]
name = "janusx"
version = "1.0.20"
edition = "2021"
rust-version = "1.74"

[lib]
name = "janusx"
crate-type = ["cdylib"]

[features]
default = ["blas-openblas"]
# Compile-time BLAS selection:
# - macOS default uses Accelerate.
# - enable `blas-openblas` to link OpenBLAS and prefer it at runtime.
blas-openblas = []

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module", "abi3-py39", "generate-import-lib"] }
numpy = "0.27.1"
csv = "1.4.0"
flate2 = "1.1.8"
memmap2 = "0.9.9"
libc = "0.2.180"
rayon = "1.10"
libm = "0.2.16"
nalgebra = "0.34.1"
rand = "0.9.2"
rand_distr = "0.5.1"
matrixmultiply = "0.3.10"

[build-dependencies]
pkg-config = "0.3"
