[package]
name = "janusx"
version = "1.0.26"
edition = "2021"
rust-version = "1.74"
description = "A suite of genotyping tools for genome-wide association study and genomic selection"
license = "AGPL-3.0-or-later"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://github.com/FJingxian/JanusX/blob/main/doc/JanusXcore.md"
homepage = "https://github.com/FJingxian/JanusX"
repository = "https://github.com/FJingxian/JanusX"

[lib]
name = "janusx"
crate-type = ["cdylib", "rlib"]

[features]
default = ["blas-openblas"]
# Compile-time BLAS selection:
# - macOS default uses Accelerate.
# - enable `blas-openblas` to link OpenBLAS and prefer it at runtime.
blas-openblas = []
python-extension = ["pyo3/extension-module"]
# Optional AVX-512 bitwise kernels (nightly-only intrinsics on many stable toolchains).
# Keep off by default so release wheels build on stable Rust.
simd-avx512 = []
metal-gpu = ["dep:metal", "dep:objc"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["abi3-py310", "generate-import-lib"] }
numpy = "0.27.1"
csv = "1.4.0"
flate2 = "1.1.8"
memmap2 = "0.9.9"
libc = "0.2.180"
rayon = "1.10"
libm = "0.2.16"
nalgebra = "0.34.1"
rand = "0.9.2"
rand_distr = "0.5.1"
matrixmultiply = "0.3.10"
metal = { version = "0.32.0", optional = true }
objc = { version = "0.2.7", optional = true }
faer = { version = "0.18.2", default-features = false, features = ["std", "rayon"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
statrs = "0.18.0"

[build-dependencies]
cc = "1.2"
pkg-config = "0.3"

[profile.dev]
debug = 1

[profile.dev.package.janusx]
opt-level = 3
