[project]
name = "janusx"
version = "1.0.19"
description = "A Suite of Genotyping Tools for Genome-Wide Association Study and Genomic Selection"
requires-python = ">=3.9"
dependencies = [
    "numpy", "scipy",
    "pandas<3.0",
    "matplotlib",
    "psutil",
    "rich", "tqdm", "rich-argparse",
    "joblib>=1.5",
]
authors = [
  {name = "Jingxian FU", email = "827888724@qq.com"},
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["GWAS", "GS", "REML", "PCA"]

[project.optional-dependencies]
ml = [
    "scikit-learn",
    "xgboost",
]
stats = [
    "statsmodels",
]
wgcna = [
    "dynamicTreeCut",
]
sparse = [
    "mkl; (platform_machine == 'x86_64' or platform_machine == 'AMD64') and platform_system != 'Darwin'",
    "pypardiso; (platform_machine == 'x86_64' or platform_machine == 'AMD64') and platform_system != 'Darwin'",
]
full = [
    "scikit-learn",
    "xgboost",
    "statsmodels",
    "dynamicTreeCut",
    "mkl; (platform_machine == 'x86_64' or platform_machine == 'AMD64') and platform_system != 'Darwin'",
    "pypardiso; (platform_machine == 'x86_64' or platform_machine == 'AMD64') and platform_system != 'Darwin'",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
python-install-mirror = "https://registry.npmmirror.com/-/binary/python-build-standalone/"

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
strip = true
module-name = "janusx.janusx"
python-source = "python"

[project.scripts]
jxpy = "janusx.script.JanusX:main"
jx = "janusx.script.JanusX:main"
