[project]
name = "JanusX_rs"
version = "0.1.0"
description = "Fast chunk-wise genotype reader (PLINK BED / VCF) powered by Rust + PyO3"
requires-python = ">=3.9"
dependencies = ["tqdm","numpy","scipy"]

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
strip = true
module-name = "JanusX_rs"
python-source = "python"